implemented Aurelio's comments

--- a/bib/unfolding.bib
+++ b/bib/unfolding.bib
@@ -1,3 +1,22 @@
+@article{Blobel:157405,
+      author        = "Blobel, Volker",
+      title         = "{Unfolding methods in high-energy physics experiments}",
+      number        = "DESY-84-118",
+      pages         = "40 p",
+      month         = "Dec",
+      year          = "1984",
+}
+
+@article{Cowan:2002in,
+      author         = "Cowan, G.",
+      title          = "{A survey of unfolding methods for particle physics}",
+      journal        = "Conf.Proc.",
+      volume         = "C0203181",
+      pages          = "248-257",
+      year           = "2002",
+      SLACcitation   = "%%CITATION = CONFP,C0203181,248;%%",
+}
+
 @article{fbu,
       author         = "Choudalakis, Georgios",
       title          = "{Fully Bayesian Unfolding}",
@@ -6,4 +25,52 @@
       archivePrefix  = "arXiv",
       primaryClass   = "physics.data-an",
       SLACcitation   = "%%CITATION = ARXIV:1201.4612;%%",
+}
+
+@article{Hocker:1995kb,
+      author         = "Hocker, Andreas and Kartvelishvili, Vakhtang",
+      title          = "{SVD approach to data unfolding}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A372",
+      pages          = "469-481",
+      doi            = "10.1016/0168-9002(95)01478-0",
+      year           = "1996",
+      eprint         = "hep-ph/9509307",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "M-C-TH-95-15, LAL-95-55",
+      SLACcitation   = "%%CITATION = HEP-PH/9509307;%%",
+}
+
+@article{Tikhonov1943stability,
+  author = {A.N. Tikhonov},
+  title = {On the stability of inverse problems},
+  journal = {{D}oklady {A}kademii nauk {SSSR}},
+  year = {1943},
+  volume = {39},
+  pages = {195-198},
+  number = {5}
+}
+
+@article{dagostini1995NIMPA,
+title = "A multidimensional unfolding method based on Bayes' theorem",
+journal = "NIM A",
+volume = "362",
+pages = "487 - 498",
+year = "1995",
+note = "",
+issn = "0168-9002",
+doi = "10.1016/0168-9002(95)00274-X",
+author = "G. D'Agostini"
+}
+
+@article{metropolis,
+   author = "Metropolis, Nicholas and Rosenbluth, Arianna W. and Rosenbluth, Marshall N. and Teller, Augusta H. and Teller, Edward",
+   title = "Equation of State Calculations by Fast Computing Machines",
+   journal = "The Journal of Chemical Physics",
+   year = "1953",
+   volume = "21",
+   number = "6", 
+   pages = "1087-1092",
+   doi = "http://dx.doi.org/10.1063/1.1699114" 
 }
