preliminary update of results section

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -14,6 +14,6 @@
 \input{tex/appendix_unfolding.tex}
 
 \chapter{Differential results}
-\label{app:results}
+\label{app:correlations}
 
 \input{tex/appendix_results7TeV.tex}
