--- a/tex/results.tex
+++ b/tex/results.tex
@@ -2,12 +2,12 @@
 \label{sec:results}
 
 This section presents the unfolded \ac{} measurements at \seventev{}
-and eighttev{}, both inclusive and differential in bins of \mtt{},
+and \eighttev{}, both inclusive and differential in bins of \mtt{},
 \pttt{} and \ytt{}. The results from data at \seventev{} have been
 published on the Journal of High Energy Physics~\cite{Aad:2013cea},
 while the \eighttev{} ones are internal results reported here for the
-purpose of this thesis. The publication results are being finalized
-and are expected before the end of 2014. 
+purpose of this thesis. The corresponding publication results are
+being finalized and are expected before the end of 2014.
 
 \section{\ac{} measurements at \seventev{}}
 \label{sec:res7tev}
@@ -31,10 +31,10 @@ $\ac{}= 0.006\pm0.010$, compatible with the SM prediction
 $\ac{}=0.0123\pm0.0005$ (see Sec.~\ref{sec:topca}).
 Table~\ref{tab:results} summarizes the
 measurements and predictions for the inclusive asymmetry, at high
-invariant mass of the top quark pair ($\mtt{} >600 \GeV{})$, and at
+invariant mass of the \ttbar{} pair ($\mtt{} >600 \GeV{})$, and at
 high $z$--component of the velocity of the \ttbar{} system ($\betatt{}>0.6$).
-The quoted uncertainty corresponds to the RMS of the marginal posterior
-probability density $\conditionalProb{\ac{}}{\Data{}}$ described in
+The quoted uncertainties correspond to the RMS of the marginal posterior
+probability densities $\conditionalProb{\ac{}}{\Data{}}$ described in
 Sec.~\ref{sec:marginalization}; therefore it accounts for both
 statistical and systematic components.
 
@@ -95,8 +95,8 @@ Statistical uncertainty                          & $0.010$ & $0.021$ & $0.017$\\
 \bottomrule
 \end{tabular}
 \caption{Impact of individual sources of uncertainty on the measured
-  \ac{} and $\ac{}(\mtt{}>600 \GeV{})$. Variations below $10\%$ of the
-  statistical uncertainty are quoted as $<0.001$ and $<0.002$ are
+  \ac{} and \mbox{$\ac{}(\mtt{}>600 \GeV{})$}. Variations below $10\%$ of the
+  statistical uncertainty, quoted as $<0.001$ and $<0.002$, are
   considered negligible.}
 \label{tab:systematics}
 \end{table}
@@ -105,15 +105,22 @@ The asymmetry spectra, measured as functions of
 \mtt{}, \pttt{} and \ytt{} are compared in Fig.~\ref{fig:unfac_diff}
 with the theoretical SM predictions and found to be compatible. 
 In addition, the results are compared with new physics predictions for
-color octets ({\it axigluons}) with masses $M_G=300 \GeV{}$ and $M_G=7
+color octets ({\it axigluons}) with masses $300 \GeV{}$ and $7
 \TeV{}$~\cite{AguilarSaavedra:2011ci}. Both models would not
 be observable in direct searches as \ttbar{} resonances: the light
-axigluon mass is below the threshold for production of top quark
+axigluon mass is below the threshold for production of \ttbar{}
 pairs, while a $7 \TeV$ mass is beyond the kinematic reach of the
 current searches at \seventev{} and \eighttev{}. In both scenarios
 the new physics couplings with top and light quarks are tuned to yield a
 forward--backward asymmetry compatible with the results reported by
-Tevatron experiments.
+Tevatron experiments. 
+The \ac{} spectrum as a function of the \ttbar{} invariant mass \mtt{}
+with the additional requirement on the $z$--component of high velocity
+of the \ttbar{} system, $\betatt{}>0.6$, is also shown in
+Fig.~\ref{fig:unfac_diff}. The enhancement of the $\qqbar{}\to\ttbar{}$
+process results in larger asymmetries for both SM and new physics
+predictions.
+
 
 \begin{figure}[!htb]\centering
   \subfloat[][]
@@ -136,18 +143,15 @@ Tevatron experiments.
 \end{figure}
 
 The asymmetry values corresponding to the spectra in
-Fig.~\ref{fig:unfac_diff} are detailed in App.~\ref{app:differentialresults}.
+Fig.~\ref{fig:unfac_diff} are detailed in
+Tables~\ref{tab:results_mtt},~\ref{tab:results_pttt},~\ref{tab:results_ytt},
+and ~\ref{tab:results_mtt_beta}.
+\input{tex/results_table7tev.tex}
 The correlation of the asymmetry values $\ac{}^i$ across differential bins is
 fully described by the posterior probability density
 $\conditionalProb{\ac{}^1,...,\ac{}^N}{\Data{}}$, where
 $N$ is the number of differential bins, and it is summarized in
 App.~\ref{app:correlations}.
-The \ac{} spectrum as a function of the \ttbar{} invariant mass \mtt{}
-with the additional requirement on the $z$--component of high velocity
-of the \ttbar{} system, $\betatt{}>0.6$, is also shown in
-Fig.~\ref{fig:unfac_diff}. The enhancement of the $\qqbar{}\to\ttbar{}$
-process results in larger asymmetries for both SM and new physics
-predictions.
 
 A comparison of the inclusive \ac{} measurements, together with the Tevatron
 \afb{} ones, with predictions from a broad range of new physics model
@@ -228,7 +232,7 @@ Multi--jets background normalization & $<0.0005$\\
 Other backgrounds normalization        & $<0.0005$\\
 $b$--tagging/mis--tag efficiency       & $<0.0005$\\
 Signal modeling                                    & $0.004$\\
-Parton shower/hadronization                & $0.003$\\
+Parton shower/hadronization                & $0.0008$\\
 Monte Carlo statistics                            & $0.0008$\\
 PDF                                                        &$0.0006$\\
 Unfolding response                               &$<0.0005$\\
@@ -244,15 +248,14 @@ Total uncertainty                                   & $0.005$ \\
 \label{tab:8tevsystematics}
 \end{table}
 
-The asymmetry spectrum as a function of
-\mtt{} is compared in Fig.~\ref{fig:8tevacvsmtt}
-with the theoretical SM predictions and found to be compatible. 
-
+The asymmetry spectrum as a function of \mtt{} is compared in
+Fig.~\ref{fig:8tevacvsmtt} with the theoretical SM predictions.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.6\textwidth]{figures/results/acvsmtt8tev}
   \caption{Measured \ac{} spectrum as a function of \mtt{} compared with SM prediction.}
   \label{fig:8tevacvsmtt}
 \end{figure}
+The \ac{} values are summarized in Table~\ref{tab:8tevacvsmtt}
 
 %The asymmetry values corresponding to the spectra in
 %Fig.~\ref{fig:8tevacvsmtt} are detailed in
