--- a/tex/results_table7tev.tex
+++ b/tex/results_table7tev.tex
@@ -4,14 +4,14 @@
   &\multicolumn{5}{c}{$\mtt{}~[\rm{GeV}]$}    \\
   \ac{} & $0$--$420$ & $420$--$500$ & $500$--$600$ & $600$--$750$ & $>750$ \\
   \midrule
-  Unfolded & $0.036\pm0.055$ & $0.003\pm0.044$ & $-0.039\pm0.047$ & $0.044\pm0.054$ & $0.011\pm0.054$ \\
+  Data & $0.036\pm0.055$ & $0.003\pm0.044$ & $-0.039\pm0.047$ & $0.044\pm0.054$ & $0.011\pm0.054$ \\
   Theory & $0.0103^{+0.0003}_{-0.0004}$ & $0.0123^{+0.0006}_{-0.0003}$ & $0.0125\pm0.0002$ & $0.0156^{+0.0007}_{-0.0009}$ & $0.0276^{+0.0004}_{-0.0008}$ \\
   \bottomrule
 \end{tabular}
 \caption{ }
 \label{tab:results_mtt}
 \end{table}
-
+%
 \begin{table}[!htp]\centering
 \caption{ }
 \begin{tabular}{l c c c }
@@ -19,13 +19,13 @@
   &\multicolumn{3}{c}{$\pttt{}~[\rm{GeV}]$}    \\
   \ac{} &     $0$--$25$           &        $25$--$60$         &  $>60$            \\
   \midrule
-  Unfolded  &    $-0.032\pm0.052$       &     $0.067\pm0.057$       &      $-0.034\pm0.034$     \\
+  Data  &    $-0.032\pm0.052$       &     $0.067\pm0.057$       &      $-0.034\pm0.034$     \\
   Theory & $0.0160^{+0.0007}_{-0.0009}$ & $-0.0058^{+0.0004}_{-0.0004}$ & $-0.0032^{+0.0002}_{-0.0002}$  \\
   \bottomrule
 \end{tabular}
 \label{tab:results_pttt}
 \end{table}
-
+%
 \begin{table}[!htp]\centering
 \caption{ }
 \begin{tabular}{l c c c }
@@ -33,13 +33,13 @@
   &\multicolumn{3}{c}{$\ytt{}$}    \\
   \ac{}  &     $0$--$0.3$          &        $0.3$--$0.7$     &  $>0.7$            \\
   \midrule
-  Unfolded  &    $-0.010\pm0.043$       &     $0.006\pm0.031$     &      $0.015\pm0.025$     \\
+  Data  &    $-0.010\pm0.043$       &     $0.006\pm0.031$     &      $0.015\pm0.025$     \\
   Theory & $0.0026^{+0.0008}_{-0.0001}$ & $0.0066^{+0.0001}_{-0.0003}$ & $0.0202^{+0.0006}_{-0.0007}$ \\
   \bottomrule
 \end{tabular}
 \label{tab:results_ytt}
 \end{table}
-
+%
 \begin{table}[!htp]\centering
 \caption{ }
 \begin{tabular}{l c c c c c }
@@ -47,74 +47,9 @@
   &\multicolumn{5}{c}{$\mtt{}~[\rm{GeV}]$ for $\betatt{} > 0.6$}    \\
   \ac{} & $0$--$420$ & $420$--$500$ & $500$--$600$ & $600$--$750$ & $>750$ \\
   \midrule
-  Unfolded  & $0.054 \pm  0.079 $ & $0.008 \pm 0.072  $ & $-0.022 \pm 0.075 $ & $-0.019 \pm 0.102    $ & $0.205 \pm 0.135$ \\
+  Data  & $0.054 \pm  0.079 $ & $0.008 \pm 0.072  $ & $-0.022 \pm 0.075 $ & $-0.019 \pm 0.102    $ & $0.205 \pm 0.135$ \\
   Theory & $0.0145^{+0.0005}_{-0.0003}$ & $0.0213^{+0.0006}_{-0.0005}$ & $0.0240^{+0.0003}_{-0.0009}$ & $0.0280^{+0.0012}_{-0.0007}$ & $0.0607 \pm 0.0002$ \\
   \bottomrule
 \end{tabular}
 \label{tab:results_mtt_beta}
-\end{table}
-
-
-\begin{table}[!htp]\centering
-\caption{ }
-\begin{tabular}{l c c c c c }
-  \toprule
-  &\multicolumn{5}{c}{$\mtt{}~[\rm{GeV}]$}    \\
-  $\rho_{i,j}$ & $0$--$420$ & $420$--$500$ & $500$--$600$ & $600$--$750$ & $>750$ \\
-  \midrule
-  $0$--$420$      & $1$ & $-0.38$ & $0.13$  & $-0.05$ & $0.01$  \\
-  $420$--$500$    &     & $1$     & $-0.53$ & $0.17$  & $-0.03$ \\
-  $500$--$600$    &     &         & $1$     & $-0.54$ & $0.14$  \\
-  $600$--$750$    &     &         &         & $1$     & $-0.43$ \\
-  $>750$          &     &         &         &         & $1$     \\
-  \bottomrule
-\end{tabular}
-\label{tab:corr_mtt}
-\end{table}
-
-\begin{table}[!htp]\centering
-\caption{ }
-\begin{tabular}{l c c c }
-  \toprule
-  &\multicolumn{3}{c}{$\pttt{}~[\rm{GeV}]$}    \\
-  $\rho_{i,j}$      &     $0$--$25$           &        $25$--$60$         &  $>60$            \\
-  \midrule
-  $0$--$25$       &    $1$    &    $-0.79$  &   $0.36$  \\
-  $25$--$60$      &           &    $1$      &   $-0.60$ \\
-  $>60$           &           &             &   $1$     \\
-  \bottomrule
-\end{tabular}
-\label{tab:corr_pttt}
-\end{table}
-
-\begin{table}[!htp]\centering
-\caption{ }
-\begin{tabular}{l c c c }
-  \toprule
-  &\multicolumn{3}{c}{$\ytt{}$}    \\
-  $\rho_{i,j}$      &  $0$--$0.3$   &  $0.3$--$0.7$  &  $>0.7$  \\
-  \midrule
-  $0$--$0.3$    &   $1$   &   $-0.33$  &   $0.05$   \\
-  $0.3$--$0.7$  &         &   $1$      &   $-0.21$  \\
-  $>0.7$        &         &            &   $1$      \\
-  \bottomrule
-\end{tabular}
-\label{tab:corr_ytt}
-\end{table}
-
-\begin{table}[!htp]\centering
-\caption{ }
-\begin{tabular}{l c c c c c }
-  \toprule
-  &\multicolumn{5}{c}{$\mtt{}~[\rm{GeV}]$ for $\betatt{}> 0.6$}    \\
-  $\rho_{i,j}$ & $0$--$420$ & $420$--$500$ & $500$--$600$ & $600$--$750$ & $>750$ \\
-  \midrule
-  $0$--$420$      & $1$ & $-0.36$ & $0.08$  & $-0.01$ & $0.01$  \\
-  $420$--$500$    &     & $1$     & $-0.57$ & $0.19$  & $-0.04$ \\
-  $500$--$600$    &     &         & $1$     & $-0.59$ & $0.16$  \\
-  $600$--$750$    &     &         &         & $1$     & $-0.50$ \\
-  $>750$          &     &         &         &         & $1$     \\
-  \bottomrule
-\end{tabular}
-\label{tab:corr_mtt_beta}
 \end{table}
