implemented Aurelio's comments

--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -53,19 +53,33 @@ compatible with the SM predictions. The set of measurements will be
 completed to match the \seventev{} set, with the differential
 measurement as a function of \pttt{} and measurements in the
 \qqbar{}--enriched sample with $\betatt{}>0.6$.
-
+Both sets of measurements are the most precise to date at the LHC,
+reaching a precision of 0.6\% in the case of the inclusive measurement
+at \eighttev{}. The high precision is necessary in order to have
+sensitivity to the small deviations expected from new physics effects.
 At this stage the asymmetry measurements at LHC do not show
-significant deviations from the SM predictions. Due to the different
-initial state and subsequently different asymmetry definitions, a direct comparison
-with the anomaly reported at Tevatron cannot be performed. One
-important step would be to simultaneously measure the dependence of
-the asymmetries on the \ttbar{} invariant mass \mtt{} and velocity
-\betatt{}, in order to extrapolate the 'collider-independent'
-asymmetries $A_u$ and $A_d$~\cite{AguilarSaavedra:2012va}. This
-measurement is quite demanding from the experimental side, since it
-requires a 3--dimensional unfolding in \mtt{}, \betatt{} and
-\dy{}. But it offers a unique possibility of testing at LHC the same
-quantities that are at the origin of the Tevatron \afb{}. 
+significant deviations from the SM predictions.
+
+The precision of these measurements will be critical to significantly
+constrain possible models of new physics that would be consistent with
+the excess at the Tevatron and the lack of a significant deviation at
+the LHC. A combination of ATLAS and CMS results has been performed at
+\seventev{}, where this measurement drives the overall precision, and
+is foreseen for the \eighttev{} results.
+Due to the different initial state and subsequently different
+asymmetry definitions, a direct comparison with the anomaly reported
+at Tevatron cannot be performed. One important step would be to
+simultaneously measure the dependence of the asymmetries on the
+\ttbar{} invariant mass \mtt{} and velocity \betatt{}, in order to
+extrapolate the 'collider-independent' asymmetries $A_u$ and
+$A_d$~\cite{AguilarSaavedra:2012va}. This measurement is quite
+demanding from the experimental side, since it requires a
+3--dimensional unfolding in \mtt{}, \betatt{} and \dy{}. But it offers
+a unique possibility of testing at LHC the same quantities that are at
+the origin of the Tevatron \afb{}.
+The experimental strategy used for this analysis, including the
+unfolding technique, appears promising to perform such extension of
+the analysis, although detailed studies still need to be performed.
 
 Measuring the asymmetry \ac{} as an effective probe for new physics in
 future LHC datasets will become more challenging. Proton collisions
